--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,123 @@
-body{
-    background-color: lightblue;
-   
-}
+/* inicio y regitro*/
+
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f5f5f5;
+  }
+  
+  form {
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  }
+  
+  label {
+    display: block;
+    margin-bottom: 5px;
+  }
+  
+  input[type="text"],
+  input[type="email"],
+  input[type="password"] {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-bottom: 10px;
+  }
+  
+  button[type="submit"] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  /* cotizador*/
+  
+  #cotizador {
+    border: 1px solid #ccc;
+    padding: 20px;
+    margin: 20px;
+    max-width: 400px;
+    background-color: #f7f7f7;
+    font-family: Arial, sans-serif;
+  }
+  
+  .coti {
+    font-size: 24px;
+    margin-top: 0;
+  }
+  
+  .cot {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .car {
+    font-weight: bold;
+  }
+  
+  .car1[type="text"] {
+    padding: 5px;
+    margin-bottom: 30px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    font-size: 16px;
+  }
+  
+  .botonCoti {
+    padding: 10px;
+    background-color: #008CBA;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+  }
+  
+  
+  #costo {
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 10px;
+  }
+  
+  
+  /*solapas auto*/
+  
+  .solapas {
+    margin-top: 20px;
+  }
+  
+  .solapa-checkbox {
+    display: none;
+  }
+  
+  .solapa-label {
+    display: block;
+    cursor: pointer;
+    padding: 10px;
+    background-color: #f2f2f2;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-weight: bold;
+    font-size: 16px;
+  }
+  
+  .solapa-label:hover {
+    background-color: #e0e0e0;
+  }
+  
+  .solapa-contenido {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.3s ease-out;
+  }
+  
+  .solapa-checkbox:checked + .solapa-label + .solapa-contenido {
+    max-height: 500px;
+  }
