--- a/css/style.css
+++ b/css/style.css
@@ -39,85 +39,78 @@ body {
   /* cotizador*/
   
   #cotizador {
-    border: 1px solid #ccc;
+    max-width: 800px;
+    margin: 0 auto;
     padding: 20px;
-    margin: 20px;
-    max-width: 400px;
-    background-color: #f7f7f7;
-    font-family: Arial, sans-serif;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    background-color: #f5f5f5;
   }
   
   .coti {
-    font-size: 24px;
-    margin-top: 0;
+    font-size: 36px;
+    text-align: center;
+    margin-bottom: 30px;
   }
   
   .cot {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+    margin-bottom: 30px;
   }
   
   .car {
-    font-weight: bold;
+    font-size: 18px;
+    margin-bottom: 5px;
   }
-  
-  .car1[type="text"] {
-    padding: 5px;
-    margin-bottom: 30px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    font-size: 16px;
-  }
-  
-  .botonCoti {
-    padding: 10px;
-    background-color: #008CBA;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    font-size: 16px;
-    cursor: pointer;
-  }
-  
-  
-  #costo {
-    font-size: 20px;
-    font-weight: bold;
-    margin-top: 10px;
-  }
-  
-  
-  /*solapas auto*/
   
   .solapas {
-    margin-top: 20px;
+    position: relative;
   }
   
   .solapa-checkbox {
-    display: none;
+    position: absolute;
+    opacity: 0;
   }
   
   .solapa-label {
-    display: block;
-    cursor: pointer;
+    background-color: #007bff;
+    color: #fff;
     padding: 10px;
-    background-color: #f2f2f2;
-    border: 1px solid #ccc;
+    cursor: pointer;
+    display: block;
+    margin-bottom: 10px;
     border-radius: 5px;
-    font-weight: bold;
-    font-size: 16px;
   }
   
-  .solapa-label:hover {
-    background-color: #e0e0e0;
+  .solapa-checkbox:checked + .solapa-label {
+    background-color: #0062cc;
   }
   
   .solapa-contenido {
     max-height: 0;
     overflow: hidden;
-    transition: max-height 0.3s ease-out;
+    transition: max-height 0.2s ease-out;
   }
   
-  .solapa-checkbox:checked + .solapa-label + .solapa-contenido {
-    max-height: 500px;
+  .solapa-checkbox:checked ~ .solapa-contenido {
+    max-height: 1000px;
+    transition: max-height 0.4s ease-in;
+  }
+  
+  .botonCoti {
+    background-color: #28a745;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+  
+  #costo {
+    font-size: 24px;
+    text-align: center;
+    margin-top: 30px;
+    font-weight: bold;
   }
